reverted back to 'mechpy' folder heading

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .ipynb_checkpoints
-__pycache__
-mechpy/__pycache__/
-mechpy/composites/__pycache__/
-mechpy/bolted_joints/__pycache__/
+*__pycache__
 *.pyc
-ropeproject/
-.vscode/
-build/
+ropeproject
+.vscode
+build
+dist
 installed_files.txt
