--- a/docs/Makefile
+++ b/docs/Makefile
@@ -12,6 +12,9 @@ help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 .PHONY: help Makefile
+.PHONY: delcache
+delcache:
+	find ../../ -type d -d -name __pycache__ -exec rm -rf {} \;
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
